// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lingui/babel-plugin-extract-messages should extract Plural messages from JSX files when there's no Trans tag (integration) 1`] = `
Object {
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        jsx-without-trans.js,
        3,
        null,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JS files (macros) 1`] = `
Object {
  Description: Object {
    origin: Array [
      Array [
        js-with-macros.js,
        7,
        description,
      ],
    ],
  },
  ID: Object {
    message: Message with id,
    origin: Array [
      Array [
        js-with-macros.js,
        12,
        null,
      ],
    ],
  },
  ID Some: Object {
    message: Message with id some,
    origin: Array [
      Array [
        js-with-macros.js,
        19,
        null,
      ],
    ],
  },
  Message: Object {
    origin: Array [
      Array [
        js-with-macros.js,
        3,
        null,
      ],
      Array [
        js-with-macros.js,
        5,
        null,
      ],
    ],
  },
  Values {param}: Object {
    origin: Array [
      Array [
        js-with-macros.js,
        17,
        null,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JS files 1`] = `
Object {
  Description: Object {
    origin: Array [
      Array [
        js-without-macros.js,
        5,
        description,
      ],
    ],
  },
  ID: Object {
    message: Message with id,
    origin: Array [
      Array [
        js-without-macros.js,
        7,
        null,
      ],
    ],
  },
  Message: Object {
    origin: Array [
      Array [
        js-without-macros.js,
        3,
        null,
      ],
    ],
  },
  Values {param}: Object {
    origin: Array [
      Array [
        js-without-macros.js,
        9,
        null,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files (macros) 1`] = `
Object {
  Hi, my name is {name}: Object {
    origin: Array [
      Array [
        jsx-with-macros.js,
        3,
        null,
      ],
    ],
  },
  Title: Object {
    origin: Array [
      Array [
        jsx-with-macros.js,
        4,
        null,
      ],
    ],
  },
  {count, plural, one {# book} other {# books}}: Object {
    origin: Array [
      Array [
        jsx-with-macros.js,
        6,
        null,
      ],
    ],
  },
}
`;

exports[`@lingui/babel-plugin-extract-messages should extract all messages from JSX files 1`] = `
Object {
  Hi, my name is <0>{name}</0>: Object {
    origin: Array [
      Array [
        jsx-without-macros.js,
        9,
        null,
      ],
    ],
  },
  msg.default: Object {
    message: Hello World,
    origin: Array [
      Array [
        jsx-without-macros.js,
        7,
        null,
      ],
      Array [
        jsx-without-macros.js,
        8,
        null,
      ],
    ],
  },
  msg.hello: Object {
    origin: Array [
      Array [
        jsx-without-macros.js,
        6,
        Description,
      ],
    ],
  },
}
`;
